# EP-WebUI

./: .gitignore  Problem.md  README.md  config.py  data_dict.json  main.py  pyproject.toml  repomix-output.xml  repomix.config.json  surrogate_model_rf_importance.csv  test.py
.cursor/rules/: riper-5.mdc
archive/: ECMs.py  EPPreprocessor.py  pipeline.py  pipeline_tkinter.py
backend/: app.py  test.py
backend/services/: azure_service.py  data_analysis_services.py  eui_data_pipeline.py  eui_dataset_service.py  eui_prediction_service.py  geometry_service.py  gnn_model.py  idf_service.py  model_service.py  optimization_service.py  pv_service.py  shadow_service.py  simulation_service.py  supabase_service.py  supabase_services.py
backend/src/: server.py
data/: IECC_OfficeMedium_STD2018_Buffalo.idf  test.idf
data/Prototypes/: ASHRAE901_ApartmentHighRise_STD2022_Chicago.idf  ASHRAE901_OfficeLarge_STD2022_Chicago.idf  ASHRAE901_OfficeMedium_STD2022_Chicago.idf  ASHRAE901_Office_Large_STD2022_Chicago.idf  US+MultiFamilyResidential+CZ5A+hp+slab+IECC_2024_Chicago_expand.idf  US+MutliFamilyResidential+CZ5A+hp+slab+IECC_2024_Chicago.idf  US+SingleFamilyResidential+CZ5A+hp+slab+IECC_2024_Chicago.idf  US+SingleFamilyResidential+CZ5A+hp+slab+IECC_2024_Chicago_expand.idf
data/TMYs/: USA_IL_Chicago-Midway.AP.725340_TMY3.epw
frontend/ep-webui/: package-lock.json  package.json  tailwind.config.js
frontend/idf-editor/: next.config.ts  package-lock.json  package.json
output/: 1Zone.idf  1ZoneDataCenterCRAC_wApproachTemp.idf  1ZoneDataCenterCRAC_wApproachTemp.idf.json  1ZoneDataCenterCRAC_wApproachTemp.json  1ZoneMeter.csv  IECC_OfficeMedium_STD2018_Buffalo.idf.json  IECC_OfficeMedium_STD2018_Buffalo.json
src/: webui.py
src/utils/: data_process.py  upload_data.py
(+22 files in other folders)
