[project]
name = "codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eppy>=0.5.63",
    "fastapi[standard]>=0.115.6",
    "google-generativeai>=0.8.3",
    "gradio>=5.11.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "supabase>=2.11.0",
]
